tests/paczka1/fuzzy1/25688698.err
Error in line 12: TA6ep7ieHkp S140 84,5
Error in line 18: j0XKmj04NZ2 A822 54,2
Error in line 13: kBCi A822 171,7
Error in line 24: kBCi S140 8,7
